--- a/css/firts-screen-style.css
+++ b/css/firts-screen-style.css
@@ -15,13 +15,14 @@
     display: block;
     font-size: 15px;
     text-align: center;
+    padding: 1em 0 5em 0;
 }
 
 
 .first-screen-image{
     display: block;
     width: 100%;
-    height: 50%;
+    height: 400px;
 }
 .first-screen ul{
     display: inline-block;
