--- a/css/responsive.css
+++ b/css/responsive.css
@@ -95,6 +95,16 @@
 }
 
 @media only screen and (max-width: 640px) {
+    .first-screen ul{
+     text-align: center;
+    }
+    .first-screen ul li{
+        display: block;
+        margin: 0;
+    }
+    .first-screen-image{
+        display: none;
+    }
     .navbar > ul > li:first-child {
         margin: 0;
     }
